implemented rudimentary tests, cleaned up email generation process

--- a/example.env
+++ b/example.env
@@ -41,6 +41,7 @@ EMAIL_HOST=
 EMAIL_PORT=465
 EMAIL_USER=
 EMAIL_PASSWORD=
+EMAIL_REPLY_ADRESS=
 
 #Client host url, used to build the links sent through emails
 CLIENT_HOST_URL=
